--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ main {
   grid-area: content;
   background-color: #0059a6;
   display: flex;
+  align-items: flex-start;
   
 }
 
@@ -60,7 +61,7 @@ header,
 footer,
 main {
   display: flex;
-  justify-content: center;
+  justify-content: 
   align-items: center;
 }
 
