--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
   min-height: 100vh;
   /* mobile first - single column */
   grid-template-columns: 1fr;
-  grid-template-rows: 70px auto 70px;
+  grid-template-rows: 200px auto 70px;
   grid-template-areas: 
     "header"
     "content"
@@ -54,7 +54,7 @@ main {
   background-color: #0059a6;
   display: flex;
   align-items: flex-start;
-  
+  justify-content: space-between;
 }
 
 header,
@@ -73,4 +73,24 @@ main {
 }
 #score-board {
   background-color: chartreuse;
+}
+
+#image-area {
+  background-color: black;
+}
+
+#choice-area {
+  background-color: yellow;
+  color: black;
+}
+
+#main-content {
+
+
+
+
+
+
+
+  
 }
