--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
         Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   margin: 0;
-  color: whitesmoke;
+  color: black;
   display: grid;
   font-size: 2.4rem;
   font-weight: bold;
@@ -39,11 +39,11 @@ body {
 
 header {
   grid-area: header;
-  background-color: #6b1200;
+ 
 }
 
 footer {
-  background-color: #f98e71;
+  
   color: #3a001e;
   grid-area: footer;
 }
@@ -51,7 +51,7 @@ footer {
 
 main {
   grid-area: content;
-  background-color: #0059a6;
+  
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
@@ -78,7 +78,7 @@ main {
 }
 
 #image-area {
-  background-color: black;
+  
   height: 50%;
 }
 
