--- a/css/style.css
+++ b/css/style.css
@@ -73,8 +73,8 @@ main {
   border-style: solid;
   border-radius: 3%;
   
-  margin: 2rem;
-  width: 20%;
+  margin: .7rem;
+  width: fit-content;
   text-align: center;
 }
 #main-content {
@@ -88,10 +88,11 @@ main {
 #score-board {
   background-color: chartreuse;
   border-style: solid;
-  border-radius: 12%;
-  margin: 2rem;
+  border-radius: 3%;
+  margin: .7rem;
   width: 10%;
   text-align: center;
+  font-size: 40px;
 }
 
 #image-area {
