--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,7 @@ footer,
 main {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 #time-clock {
@@ -81,8 +82,9 @@ main {
   
   width: 100%;
   height: 100%;
-  /* border-style: solid;
-  border-radius: 12%; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
 }
 #score-board {
@@ -101,6 +103,7 @@ main {
   border-style: solid;
   border-radius: 3%;
   margin: .5rem;
+  
 }
 
 #choice-area {
@@ -124,6 +127,7 @@ main {
   border-style: solid;
   border-radius: 3%;
   border-width: .3rem;
+  max-height: 50%;
 }
 .btn:hover {
   background-color: aliceblue;
