--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ main {
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 
@@ -109,10 +110,12 @@ main {
 #choice-area {
   background-color: yellow;
   color: black;
-  height: 50%;
+  height: 100%;
   display: flex;
   border-style: solid;
   border-radius: 3%;
+  align-items: center;
+  justify-content: center;
 }
 
 .skip-reset {
@@ -127,10 +130,14 @@ main {
   border-style: solid;
   border-radius: 3%;
   border-width: .3rem;
-  max-height: 50%;
+  
 }
 .btn:hover {
   background-color: aliceblue;
   color: blue;
  
+}
+
+.msg {
+  text-align: center;
 }
