--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-color: gray;
+  background-color: whitesmoke;
   /* Use a system font, if none are available use an available sans-sarif font */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
         Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
@@ -79,7 +79,8 @@ main {
   text-align: center;
 }
 #main-content {
-  
+  border-style: solid;
+  border-radius: 3%;
   width: 70%;
   height: 100%;
   display: flex;
@@ -100,7 +101,7 @@ main {
 }
 
 #image-area {
-  background-color: blueviolet;
+  
   height: 30%;
   border-style: solid;
   border-radius: 3%;
@@ -109,14 +110,13 @@ main {
 }
 
 #choice-area {
-  background-color: yellow;
+  
   color: black;
   height: 25%;
   width: 100%;
   display: flex;
   
-  border-style: solid;
-  border-radius: 3%;
+
   align-items: center;
   justify-content: center;
 }
@@ -137,7 +137,7 @@ main {
 }
 .btn:hover {
   background-color: aliceblue;
-  color: blue;
+  color: black;
  
 }
 
