--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,10 @@ main {
 .skip-reset {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
+  border-top: .3rem;
+  border-top-color: black;
+  border-top-style: solid;
 }
 
 .btn {
@@ -141,9 +144,10 @@ main {
   border-style: solid;
   border-radius: 1rem;
   border-width: .3rem;
+  background-color: rgb(43, 189, 226);
 }
 
-.btn:hover {
+.btn-md:hover {
   background-color: aliceblue;
   color: black;
  
