--- a/css/style.css
+++ b/css/style.css
@@ -84,10 +84,9 @@ main {
   border-radius: 3%;
   border-width: .3rem;
   width: 70%;
-  height: 100%;
+  height: 75%;
   display: grid;
-
-
+  grid-template-columns: ;
 }
 #score-board {
   background-color: chartreuse;
